<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">ScreenOffAnimation</string>
    <string name="app_info">Custom Screen Off Animations for all ROMs (zst123)</string>

    <!-- Others -->
    <string name="error_animating">There was an error with the current animation.\nIt is logged in Xposed Installer.</string>

    <!-- Settings -->
    <string name="menu_reset_settings_title">Reset Settings</string>
    <string name="menu_reset_settings_dialog">Reset all the settings to default?</string>
    <string name="xposed_disabled_title">Module Inactive</string>
    <string name="xposed_disabled_summary">This module does not appear to be running.\nEnsure that this module is checked in Xposed Installer and you have rebooted the device</string>
    <string name="setting_enable">Enable</string>
    <string name="setting_anim">Animation</string>
    <string name="setting_anim_off">Screen Off</string>
    <string name="setting_anim_on">Screen On</string>
    <string name="setting_anim_button">Select Animation</string>
    <string name="setting_speed">Speed</string>
    <string name="setting_preview">Preview</string>
    <string name="setting_preview_button">Preview Animation</string>

    <!-- Animations -->
    <string name="anim_random">Random</string>
    <string name="anim_random_note">Choose the animations to use for the random selection</string>
    <string name="anim_fade">Fade</string>
    <string name="anim_crt">CRT (Horizontal)</string>
    <string name="anim_crt_vertical">CRT (Vertical)</string>
    <string name="anim_scale_down">Scale Down</string>
    <string name="anim_tv_burn">TV Burn In</string>
    <string name="anim_lgog">LG Optimus G</string>
    <string name="anim_fadetiles">Fade Tiles</string>
    <string name="anim_vertu_sig">Vertu Sig. Touch</string>
    <string name="anim_lollipop_fade_out">Android Lollipop Fade</string>
    <string name="anim_scale_down_bottom">Scale Down Bottom</string>
    <string name="anim_bounce">Bounce</string>
    <string name="anim_3dflip">3D Flip</string>
    <string name="anim_wp8">Windows Phone 8</string>
    <string name="anim_flip_tiles">Flip Tiles</string>

</resources>